# libfn

./: .gitignore  AUTHORS  Makefile  Makefile.am  Makefile.in  README  color.h  config.h.in  configure  configure.ac  fn.pc.in  fnctl  fnctl.c  libfn.c  libfn.h  remote-proto.h
debian/: README  changelog  control  copyright  libfn.cron.d  libfn.cron.d.ex  libfn.default  libfn.doc-base.EX  libfn.init  menu.ex  shlibs.local.ex
fnvum/: README  dump  fnvum  fnvum.c
lib/: dft.c  dft.h  libfn.c
share/: replay.eeprom
share/iso-226_equal_loudness/: iso_266_50_phon.ods
share/web/: fade.php  index.html
share/web/css/: style.css
src/: Makefile.am  Makefile.in  color.h  fnctl.c  fnflash.c  fnpom.c  fnvum.c  fnvum_fftw.c  fnweb.c  libfn.c  libfn.h  remote-proto.h  static-programs.h  sun.c
web/: index.html
web/css/: style.css
web/js/: colorwheel.js  frontend.js
